Ec2/ec2.yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: This cloud formation is to deploy a basic 

Parameters:
  pprofilename:
    Description: Instance profile name
    Type: String
  
  prolename:
    Description: Role name for instance profile
    Type: String

  pscgroupname:
    Description: Sec group for ec2
    Type: String
  
  pvpcId:
    Description: vpc ID
    Type: String

  psubnetId:
    Description: subnet ID
    Type: String

Resources:

  rSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 security group
      GroupName: !Ref pscgroupname
      SecurityGroupEgress: 
        - CidrIp: 0.0.0.0/0
          IpProtocol: "-1"
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: !Ref pvpcId


  rRole: 
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Description: Role for instance profile
      ManagedPolicyArns: 
        - "arn:aws:iam::aws:policy/AdministratorAccess"
      Path: /
      RoleName: !Ref prolename



  rInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: !Ref pprofilename
      Path: /
      Roles: 
        - !Ref rRole

  rInstance:

    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: "us-east-1b"
      BlockDeviceMappings: 
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 50
            DeleteOnTermination: true 
        - DeviceName: /dev/sdf
          Ebs:
            VolumeSize: 120
            DeleteOnTermination: true
      IamInstanceProfile: !Ref rInstanceProfile
      ImageId: ami-051f8a213df8bc089
      InstanceType: t2.micro
      KeyName: jumpbox
      SecurityGroupIds: 
        - !Ref rSecGroup
      SubnetId: !Ref psubnetId
      UserData: 
            Fn::Base64:
              !Sub | 
                #!/bin/bash
                yum update -y
                yum install -y httpd
                yum -y install epel-release
                yum -y install htop
                sudo yum install awscli
                sudo mkfs -t xfs /dev/xvdf
                sudo mkdir /data
                sudo mount /dev/xvdf /data
                systemctl start httpd
                systemctl enable httpd
                echo "<h1>Hello Mundo from $(hostname -f) </h1>" > /var/www/html/index.html
